Do a little bit of localebending

--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -589,17 +589,17 @@ Stats.Header.Combat=[[GOLD]]-=BOJOVE DOVEDNOSTI=-
 Stats.Header.Gathering=[[GOLD]]-=SHROMAZDOVACI DOVEDNOSTI=-
 Stats.Header.Misc=Ostatni schopnosti
 Stats.Own.Stats=[[GREEN]][mcMMO] Statistiky
-Perks.xp.name=Zku\u0161enost
-Perks.xp.desc=Obdrzene {0}x Zkusenosti
-Perks.lucky.name=\u0160test\u00ed
-Perks.lucky.desc=D\u00e1v\u00e1 {0} dovednostem a schopnostem o 33,3% lep\u0161\u00ed \u0161anci na aktivaci.
-Perks.lucky.desc.login=D\u00e1v\u00e1 ur\u010dit\u00fdm dovednostem a schopnostem o 33,3% lep\u0161\u00ed \u0161anci na aktivaci.
-Perks.lucky.bonus=[[GOLD]] ({0} s perkem \u0160\u0165astlivec)
-Perks.cooldowns.name=Rychle zotaveni
-Perks.cooldowns.desc=Zmen\u0161\u00ed dobu znovunabit\u00ed schopnosti o {0}.
-Perks.activationtime.name=Vytrvalost
-Perks.activationtime.desc=Prodlu\u017euje pou\u017eit\u00ed schopnosti na {0} sekund.
-Perks.activationtime.bonus=[[GOLD]] ({0} s perkem V\u00fddr\u017enost)
+Perks.XP.Name=Zku\u0161enost
+Perks.XP.Desc=Obdrzene {0}x Zkusenosti
+Perks.Lucky.Name=\u0160test\u00ed
+Perks.Lucky.Desc=D\u00e1v\u00e1 {0} dovednostem a schopnostem o 33,3% lep\u0161\u00ed \u0161anci na aktivaci.
+Perks.Lucky.Desc.Login=D\u00e1v\u00e1 ur\u010dit\u00fdm dovednostem a schopnostem o 33,3% lep\u0161\u00ed \u0161anci na aktivaci.
+Perks.Lucky.Bonus=[[GOLD]] ({0} s perkem \u0160\u0165astlivec)
+Perks.Cooldowns.Name=Rychle zotaveni
+Perks.Cooldowns.Desc=Zmen\u0161\u00ed dobu znovunabit\u00ed schopnosti o {0}.
+Perks.ActivationTime.Name=Vytrvalost
+Perks.ActivationTime.Desc=Prodlu\u017euje pou\u017eit\u00ed schopnosti na {0} sekund.
+Perks.ActivationTime.Bonus=[[GOLD]] ({0} s perkem V\u00fddr\u017enost)
 Hardcore.Player.Loss=[GOLD]][mcMMO] [[DARK_RED]]Ztratil jsi [[BLUE]]{0}[[DARK_RED]] za smrt.
 Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] byl p\u0159\u00edli\u0161 m\u00e1lo dovedn\u00fd na to aby ti p\u0159edal v\u011bdomosti.
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Z\u00edskal jsi [[BLUE]]{0}[[DARK_AQUA]] level\u016f od [[YELLOW]]{1}.
@@ -668,8 +668,8 @@ Commands.Description.skillreset=Resetuje u\u017eivatelsk\u00e9 mcMMO \u00farovn\
 Commands.Description.vampirism=Upravuje mcMMO procenta up\u00edrstv\u00ed nebo zap\u00edn\u00e1/vyp\u00edna up\u00edrsk\u00fd m\u00f3d
 Commands.Description.xplock=Nastav\u00ed tv\u016fj mcMMO XP bar na konkr\u00e9tn\u00ed mcMMO skill
 Commands.Description.xprate=Upravuje mcMMO XP n\u00e1sobek nebo spou\u0161t\u00ed mcMMO XP ud\u00e1lost
-UpdateChecker.outdated=Pou\u017e\u00edv\u00e1\u0161 zastaralou verzi mcMMO!
-UpdateChecker.newavailable=Nov\u00e1 verze dostupn\u00e1 na BukkitDevu.
+UpdateChecker.Outdated=Pou\u017e\u00edv\u00e1\u0161 zastaralou verzi mcMMO!
+UpdateChecker.NewAvailable=Nov\u00e1 verze dostupn\u00e1 na BukkitDevu.
 Scoreboard.Header.PlayerStats=mcMMO Staty
 Scoreboard.Header.PlayerRank=mcMMO Ranky
 Scoreboard.Header.PlayerInspect=mcMMO Staty:
