--- a/src/main/resources/locale/locale_cy.properties
+++ b/src/main/resources/locale/locale_cy.properties
@@ -454,17 +454,17 @@ Stats.Header.Combat=[GOLD]] - = GWRTHSEFYLL SGILIAU = -
 Stats.Header.Gathering=[[GOLD]] -= CASGLU SGILIAU = = -
 Stats.Header.Misc=[[GOLD]]-=MISC SKILLS=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Ystadegau
-Perks.xp.name=Experience
-Perks.xp.desc=Receive {0}x XP.
-Perks.lucky.name=Luck
-Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
-Perks.lucky.desc.login=Gives certain skills and abilities a 33.3% better chance to activate.
-Perks.lucky.bonus=[[GOLD]] ({0} with Lucky Perk)
-Perks.cooldowns.name=Fast Recovery
-Perks.cooldowns.desc=Cuts cooldown duration by {0}.
-Perks.activationtime.name=Endurance
-Perks.activationtime.desc=Increases ability activation time by {0} seconds.
-Perks.activationtime.bonus=[[GOLD]] ({0}s with Endurance Perk)
+Perks.XP.Name=Experience
+Perks.XP.Desc=Receive {0}x XP.
+Perks.Lucky.Name=Luck
+Perks.Lucky.Desc=Gives {0} skills and abilities a 33.3% better chance to activate.
+Perks.Lucky.Desc.Login=Gives certain skills and abilities a 33.3% better chance to activate.
+Perks.Lucky.Bonus=[[GOLD]] ({0} with Lucky Perk)
+Perks.Cooldowns.Name=Fast Recovery
+Perks.Cooldowns.Desc=Cuts cooldown duration by {0}.
+Perks.ActivationTime.Name=Endurance
+Perks.ActivationTime.Desc=Increases ability activation time by {0} seconds.
+Perks.ActivationTime.Bonus=[[GOLD]] ({0}s with Endurance Perk)
 Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was too unskilled to grant you any knowledge.
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was unable to steal knowledge from you!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] has stolen [[BLUE]]{1}[[DARK_RED]] levels from you!
