--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -455,17 +455,17 @@ Stats.Header.Combat=[[GOLD]]-=KAMP EVNER=-
 Stats.Header.Gathering=[[GOLD]]-=INDSAMLINGS EVNER=-
 Stats.Header.Misc=[[GOLD]]-=MISC SKILLS=-
 Stats.Own.Stats=[[GREEN]][mcMMO] F\u00e6rdigheder
-Perks.xp.name=Erfaring
-Perks.xp.desc=Modtag {0}x XP.
-Perks.lucky.name=Held
-Perks.lucky.desc=Giver {0} Evner en 33.3% bedre chance for at aktivere.
-Perks.lucky.desc.login=Giver visse Evner en 33.3% bedre chance for at aktivere.
-Perks.lucky.bonus=[[GOLD]] ({0} med heldig frynsegode)
-Perks.cooldowns.name=Hurtig Bedring
-Perks.cooldowns.desc=Sk\u00e6rer Nedk\u00f8lings tiden ned med {0}.
-Perks.activationtime.name=Udholdenhed
-Perks.activationtime.desc=Forl\u00e6nger evne aktivations tid med {0} sekunder
-Perks.activationtime.bonus=[[GOLD]] ({0}s med Udholdenheds Frynsegode)
+Perks.XP.Name=Erfaring
+Perks.XP.Desc=Modtag {0}x XP.
+Perks.Lucky.Name=Held
+Perks.Lucky.Desc=Giver {0} Evner en 33.3% bedre chance for at aktivere.
+Perks.Lucky.Desc.Login=Giver visse Evner en 33.3% bedre chance for at aktivere.
+Perks.Lucky.Bonus=[[GOLD]] ({0} med heldig frynsegode)
+Perks.Cooldowns.Name=Hurtig Bedring
+Perks.Cooldowns.Desc=Sk\u00e6rer Nedk\u00f8lings tiden ned med {0}.
+Perks.ActivationTime.Name=Udholdenhed
+Perks.ActivationTime.Desc=Forl\u00e6nger evne aktivations tid med {0} sekunder
+Perks.ActivationTime.Bonus=[[GOLD]] ({0}s med Udholdenheds Frynsegode)
 Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] havde ikke evner nom til at give dig nogen viden.
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Du har stj\u00e5let [[BLUE]]{0}[[DARK_AQUA]] levels fra [[YELLOW]]{1}.
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] var ikke i stand til at stj\u00e6le viden fra dig!
