--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -476,17 +476,17 @@ Stats.Header.Combat=[[GOLD]]-=KAMPF SKILLS=-
 Stats.Header.Gathering=[[GOLD]]-=SAMMEL SKILLS=-
 Stats.Header.Misc=[[GOLD]]-=SONSTIGE SKILLS=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Werte
-Perks.xp.name=Erfahrung
-Perks.xp.desc=Erhalte {0}x XP.
-Perks.lucky.name=Gl\u00fcck
-Perks.lucky.desc=33.3% Erh\u00f6hte Chance auf Aktivierung von {0} Skills & F\u00e4higkeiten.
-Perks.lucky.desc.login=33.3% Erh\u00f6hte Chance auf Aktivierung von gewissen Skills & F\u00e4higkeiten.
-Perks.lucky.bonus=[[GOLD]] ({0} mit Gl\u00fcck-Perk)
-Perks.cooldowns.name=Schnelle Wiederherstellung
-Perks.cooldowns.desc=Verk\u00fcrzt die Cooldownzeit um {0}.
-Perks.activationtime.name=Ausdauer
-Perks.activationtime.desc=Erh\u00f6ht die Aktivierungszeit von F\u00e4higkeiten um {0} Sekunden.
-Perks.activationtime.bonus=[[GOLD]] ({0}s with Endurance Perk)
+Perks.XP.Name=Erfahrung
+Perks.XP.Desc=Erhalte {0}x XP.
+Perks.Lucky.Name=Gl\u00fcck
+Perks.Lucky.Desc=33.3% Erh\u00f6hte Chance auf Aktivierung von {0} Skills & F\u00e4higkeiten.
+Perks.Lucky.Desc.Login=33.3% Erh\u00f6hte Chance auf Aktivierung von gewissen Skills & F\u00e4higkeiten.
+Perks.Lucky.Bonus=[[GOLD]] ({0} mit Gl\u00fcck-Perk)
+Perks.Cooldowns.Name=Schnelle Wiederherstellung
+Perks.Cooldowns.Desc=Verk\u00fcrzt die Cooldownzeit um {0}.
+Perks.ActivationTime.Name=Ausdauer
+Perks.ActivationTime.Desc=Erh\u00f6ht die Aktivierungszeit von F\u00e4higkeiten um {0} Sekunden.
+Perks.ActivationTime.Bonus=[[GOLD]] ({0}s with Endurance Perk)
 Hardcore.Player.Loss=[[GOLD]][mcMMO] [[DARK_RED]]Du hast durch den Tod [[BLUE]]{0}[[DARK_RED]] verloren.
 Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was too unskilled to grant you any knowledge.
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Du hast [[BLUE]]{0}[[DARK_AQUA]] Level von [[YELLOW]]{1} [[DARK_AQUA]]gestohlen.
