--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -675,17 +675,17 @@ Stats.Header.Misc=[[GOLD]]-=MISC SKILLS=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Stats
 
 #PERKS
-Perks.xp.name=Experience
-Perks.xp.desc=Receive boosted XP in certain skills.
-Perks.lucky.name=Luck
-Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
-Perks.lucky.desc.login=Gives certain skills and abilities a 33.3% better chance to activate.
-Perks.lucky.bonus=[[GOLD]] ({0} with Lucky Perk)
-Perks.cooldowns.name=Fast Recovery
-Perks.cooldowns.desc=Cuts cooldown duration by {0}.
-Perks.activationtime.name=Endurance
-Perks.activationtime.desc=Increases ability activation time by {0} seconds.
-Perks.activationtime.bonus=[[GOLD]] ({0}s with Endurance Perk)
+Perks.XP.Name=Experience
+Perks.XP.Desc=Receive boosted XP in certain skills.
+Perks.Lucky.Name=Luck
+Perks.Lucky.Desc=Gives {0} skills and abilities a 33.3% better chance to activate.
+Perks.Lucky.Desc.Login=Gives certain skills and abilities a 33.3% better chance to activate.
+Perks.Lucky.Bonus=[[GOLD]] ({0} with Lucky Perk)
+Perks.Cooldowns.Name=Fast Recovery
+Perks.Cooldowns.Desc=Cuts cooldown duration by {0}.
+Perks.ActivationTime.Name=Endurance
+Perks.ActivationTime.Desc=Increases ability activation time by {0} seconds.
+Perks.ActivationTime.Bonus=[[GOLD]] ({0}s with Endurance Perk)
 
 #HARDCORE
 Hardcore.Mode.Disabled=[[GOLD]][mcMMO] Hardcore mode {0} disabled. {1}
@@ -759,8 +759,8 @@ Commands.Description.xplock=Lock your mcMMO XP bar to a specific mcMMO skill
 Commands.Description.xprate=Modify the mcMMO XP rate or start an mcMMO XP event
 
 #UPDATE CHECKER
-UpdateChecker.outdated=You are using an outdated version of mcMMO!
-UpdateChecker.newavailable=There is a new version available on BukkitDev.
+UpdateChecker.Outdated=You are using an outdated version of mcMMO!
+UpdateChecker.NewAvailable=There is a new version available on BukkitDev.
 
 #SCOREBOARD HEADERS
 Scoreboard.Header.PlayerStats=mcMMO Stats
