--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -602,17 +602,17 @@ Stats.Header.Combat=[[GOLD]]-=HABILIDADES DE COMBATE=-
 Stats.Header.Gathering=[[GOLD]]-=HABILIDADES DE RECOLECCI\u00d3N=-
 Stats.Header.Misc=[[GOLD]]-=HABILIDADES VARIAS=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Estad\u00edsticas
-Perks.xp.name=Experiencia
-Perks.xp.desc=Recibes {0}x XP
-Perks.lucky.name=Suerte
-Perks.lucky.desc=Da {0} destrezas y habilidades de un 33,3% m\u00e1s posibilidades de activar.
-Perks.lucky.desc.login=Da ciertas destrezas y habilidades de un 33,3% m\u00e1s posibilidades de activar.
-Perks.lucky.bonus=[[GOLD]] ({0} con suerte de beneficios adicionales)
-Perks.cooldowns.name=Recuperaci\u00f3n rapida
-Perks.cooldowns.desc=Acorta la duraci\u00f3n de tiempo de reutilizaci\u00f3n {0}
-Perks.activationtime.name=Resistencia
-Perks.activationtime.desc=Aumenta el tiempo de activaci\u00f3n de la capacidad por {0} segundos.
-Perks.activationtime.bonus=[[GOLD]] ({0}s con beneficio de resistencia)
+Perks.XP.Name=Experiencia
+Perks.XP.Desc=Recibes {0}x XP
+Perks.Lucky.Name=Suerte
+Perks.Lucky.Desc=Da {0} destrezas y habilidades de un 33,3% m\u00e1s posibilidades de activar.
+Perks.Lucky.Desc.Login=Da ciertas destrezas y habilidades de un 33,3% m\u00e1s posibilidades de activar.
+Perks.Lucky.Bonus=[[GOLD]] ({0} con suerte de beneficios adicionales)
+Perks.Cooldowns.Name=Recuperaci\u00f3n rapida
+Perks.Cooldowns.Desc=Acorta la duraci\u00f3n de tiempo de reutilizaci\u00f3n {0}
+Perks.ActivationTime.Name=Resistencia
+Perks.ActivationTime.Desc=Aumenta el tiempo de activaci\u00f3n de la capacidad por {0} segundos.
+Perks.ActivationTime.Bonus=[[GOLD]] ({0}s con beneficio de resistencia)
 Hardcore.Player.Loss=[[GOLD]][mcMMO] [[DARK_RED]]Has perdido [[BLUE]]{0}[[DARK_RED]] por morir.
 Vampirism.Killer.Failure=D]][mcMMO] [[YELLOW]]{0}[[GRAY]] no era lo suficiente habilidoso para concederte algun conocimiento.
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Has robado [[BLUE]]{0}[[DARK_AQUA]] niveles de [[YELLOW]]{1}.
@@ -686,8 +686,8 @@ Commands.Description.skillreset=Resetear el nivel mcMMO de un usuario
 Commands.Description.vampirism=Modifica el porcentaje de vampirismo mcMMO o Activa/Desactiva el modo vampiro
 Commands.Description.xplock=Bloquear la barra de experiencia mcMMO de una habilidad especifica
 Commands.Description.xprate=Modifica la velocidad del mcMMO XP o  comieza un evento de mcMMO XP
-UpdateChecker.outdated=Estas usando una version de mcMMO antigua!
-UpdateChecker.newavailable=Hay una nueva version disponible en BukkitDev
+UpdateChecker.Outdated=Estas usando una version de mcMMO antigua!
+UpdateChecker.NewAvailable=Hay una nueva version disponible en BukkitDev
 Scoreboard.Header.PlayerStats=Estadisticas de mcMMO
 Scoreboard.Header.PlayerRank=Rankings de mcMMO
 Scoreboard.Header.PlayerInspect=Estadisticas mcMMO:
