--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -589,17 +589,17 @@ Stats.Header.Combat=[[GOLD]]-=ABILITA'' DI COMBATTIMENTO=-
 Stats.Header.Gathering=[[GOLD]]-=ABILITA'' DI RACCOLTA=-
 Stats.Header.Misc=[[GOLD]]-=ABILITA'' VARIE=-
 Stats.Own.Stats=[[GREEN]]Statistiche [mcMMO]
-Perks.xp.name=Esperienza
-Perks.xp.desc=Ricevi {0}x XP.
-Perks.lucky.name=Fortuna
-Perks.lucky.desc=Aumenta del 33% le probabilit\u00e0 di attivarsi delle abilit\u00e0 e capacit\u00e0 di {0}.
-Perks.lucky.desc.login=Aumenta del 33% le probabilit\u00e0 di attivarsi di certe abilit\u00e0 e capacit\u00e0.
-Perks.lucky.bonus=[[GOLD]] ({0}% con il Vantaggio Fortuna)
-Perks.cooldowns.name=Recupero Rapido
-Perks.cooldowns.desc=Riduce la durata del raffreddamento di {0}.
-Perks.activationtime.name=Resistenza
-Perks.activationtime.desc=Incrementa il tempo di attivazione dell''abilit\u00e0 di {0} secondi.
-Perks.activationtime.bonus=[[GOLD]] ({0}% con il Vantaggio Fortuna)
+Perks.XP.Name=Esperienza
+Perks.XP.Desc=Ricevi {0}x XP.
+Perks.Lucky.Name=Fortuna
+Perks.Lucky.Desc=Aumenta del 33% le probabilit\u00e0 di attivarsi delle abilit\u00e0 e capacit\u00e0 di {0}.
+Perks.Lucky.Desc.Login=Aumenta del 33% le probabilit\u00e0 di attivarsi di certe abilit\u00e0 e capacit\u00e0.
+Perks.Lucky.Bonus=[[GOLD]] ({0}% con il Vantaggio Fortuna)
+Perks.Cooldowns.Name=Recupero Rapido
+Perks.Cooldowns.Desc=Riduce la durata del raffreddamento di {0}.
+Perks.ActivationTime.Name=Resistenza
+Perks.ActivationTime.Desc=Incrementa il tempo di attivazione dell''abilit\u00e0 di {0} secondi.
+Perks.ActivationTime.Bonus=[[GOLD]] ({0}% con il Vantaggio Fortuna)
 Hardcore.Player.Loss=[[GOLD]][mcMMO] [[DARK_RED]]Hai perso [[BLUE]]{0}[[DARK_RED]] a causa della morte.
 Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] non era abbastanza abile da darti alcuna conoscenza.
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Hai rubato [[BLUE]]{0}[[DARK_AQUA]] livelli a [[YELLOW]]{1}.
@@ -655,8 +655,8 @@ Commands.Description.skillreset=Azzera i livelli mcMMO di un utente
 Commands.Description.vampirism=Modifica la percentuale di vampirismo mcMMO o attiva/disattiva la modalit\u00e0 vampirismo
 Commands.Description.xplock=Blocca la tua barra XP di mcMMO su una specifica abilit\u00e0 di mcMMO
 Commands.Description.xprate=Modifica il tasso XP di mcMMO o d\u00e0 inizio a un evento XP mcMMO.
-UpdateChecker.outdated=Stai usando una versione sorpassata di mcMMO!
-UpdateChecker.newavailable=\u00c8 disponibile una nuova versione su BukkitDev.
+UpdateChecker.Outdated=Stai usando una versione sorpassata di mcMMO!
+UpdateChecker.NewAvailable=\u00c8 disponibile una nuova versione su BukkitDev.
 Scoreboard.Header.PlayerStats=Statistiche mcMMO
 Scoreboard.Header.PlayerRank=Graduatorie McMMO
 Scoreboard.Header.PlayerInspect=Statistiche mcMMO:
