--- a/src/main/resources/locale/locale_ja_JP.properties
+++ b/src/main/resources/locale/locale_ja_JP.properties
@@ -101,8 +101,8 @@ Stats.Header.Combat=[[GOLD]]\u6226\u95d8\u306e\u6280\u8853
 Stats.Header.Gathering=[[GOLD]]-=\u53ce\u96c6\u30b9\u30ad\u30eb=-
 Stats.Own.Stats=[[GREEN]][mcMMO] \u7d71\u8a08\u60c5\u5831
 Commands.Description.mcremove=mcMMO\u306e\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u304b\u3089\u30e6\u30fc\u30b6\u3092\u524a\u9664\u3057\u307e\u3059\u3002
-UpdateChecker.outdated=\u53e4\u3044\u30d0\u30fc\u30b8\u30e7\u30f3\u306emcMMO\u3092\u4f7f\u7528\u3057\u3066\u3044\u307e\u3059!
-UpdateChecker.newavailable=BukkitDev\u306b\u65b0\u3057\u3044\u30d0\u30fc\u30b8\u30e7\u30f3\u304c\u3042\u308a\u307e\u3059\u3002
+UpdateChecker.Outdated=\u53e4\u3044\u30d0\u30fc\u30b8\u30e7\u30f3\u306emcMMO\u3092\u4f7f\u7528\u3057\u3066\u3044\u307e\u3059!
+UpdateChecker.NewAvailable=BukkitDev\u306b\u65b0\u3057\u3044\u30d0\u30fc\u30b8\u30e7\u30f3\u304c\u3042\u308a\u307e\u3059\u3002
 Scoreboard.Header.PlayerStats=mcMMO \u30b9\u30c6\u30fc\u30bf\u30b9
 Scoreboard.Header.PlayerRank=\uff4d\uff43MMO \u30e9\u30f3\u30ad\u30f3\u30b0
 Scoreboard.Header.PlayerInspect=McMMO \u30b9\u30c6\u30fc\u30bf\u30b9\uff1a
