--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -242,10 +242,10 @@ Stats.Header.Combat=[[GOLD]]-=Strijd Ervaring=-
 Stats.Header.Gathering=[[GOLD]]-=VERZAMELAAR VAARDIGHEDEN=-
 Stats.Header.Misc=[[GOLD]]-=MISC ERVARING=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Stats
-Perks.lucky.name=Geluk
-Perks.lucky.bonus=[[GOLD]] ({0} met Geluks Perk)
-Perks.activationtime.name=Uithoudingsvermogen
+Perks.Lucky.Name=Geluk
+Perks.Lucky.Bonus=[[GOLD]] ({0} met Geluks Perk)
+Perks.ActivationTime.Name=Uithoudingsvermogen
 Smelting.Listener=Smelten:
 Commands.Description.ptp=Teleport naar een groepslid
-UpdateChecker.outdated=U gebruikt een verouderde versie van mcMMO!
-UpdateChecker.newavailable=Er is een nieuwe versie beschikbaar op BukkitDev.
+UpdateChecker.Outdated=U gebruikt een verouderde versie van mcMMO!
+UpdateChecker.NewAvailable=Er is een nieuwe versie beschikbaar op BukkitDev.
