--- a/src/main/resources/locale/locale_pl.properties
+++ b/src/main/resources/locale/locale_pl.properties
@@ -551,17 +551,17 @@ Stats.Header.Combat=[[GOLD]]-=UMIEJ\u0118TNO\u015aCI BOJOWE=-
 Stats.Header.Gathering=[[GOLD]]-=UMIEJ\u0118TNO\u015aCI ZBIERANIA=-
 Stats.Header.Misc=[[GOLD]]-=ROZNE UMIEJETNOSCI=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Statystyki
-Perks.xp.name=Do\u015bwiadczenie
-Perks.xp.desc=Otrzymuje {0}x XP''a.
-Perks.lucky.name=Szcz\u0119\u015bcie
-Perks.lucky.desc=Daje {0} i umiej\u0119tno\u015bciom o 33.3% lepsz\u0105 szanse na aktywacj\u0119.
-Perks.lucky.desc.login=Daje wybranym skillom i umiej\u0119tno\u015bciom o 33.3% lepsz\u0105 szanse na aktywacj\u0119.
-Perks.lucky.bonus=[[GOLD]] ({0} ze zdolno\u015bci\u0105 Szcz\u0119\u015bcia)
-Perks.cooldowns.name=Szybka Regeneracja
-Perks.cooldowns.desc=Zmniejsza czas odnowienia zdolno\u015bci o {0}.
-Perks.activationtime.name=Wytrzyma\u0142o\u015b\u0107
-Perks.activationtime.desc=Zwi\u0119ksza czas na u\u017cycie zdolno\u015bci o {0} sekund.
-Perks.activationtime.bonus=[[GOLD]] ({0}s ze zdolno\u015bci\u0105 Wytrzyma\u0142o\u015bci)
+Perks.XP.Name=Do\u015bwiadczenie
+Perks.XP.Desc=Otrzymuje {0}x XP''a.
+Perks.Lucky.Name=Szcz\u0119\u015bcie
+Perks.Lucky.Desc=Daje {0} i umiej\u0119tno\u015bciom o 33.3% lepsz\u0105 szanse na aktywacj\u0119.
+Perks.Lucky.Desc.Login=Daje wybranym skillom i umiej\u0119tno\u015bciom o 33.3% lepsz\u0105 szanse na aktywacj\u0119.
+Perks.Lucky.Bonus=[[GOLD]] ({0} ze zdolno\u015bci\u0105 Szcz\u0119\u015bcia)
+Perks.Cooldowns.Name=Szybka Regeneracja
+Perks.Cooldowns.Desc=Zmniejsza czas odnowienia zdolno\u015bci o {0}.
+Perks.ActivationTime.Name=Wytrzyma\u0142o\u015b\u0107
+Perks.ActivationTime.Desc=Zwi\u0119ksza czas na u\u017cycie zdolno\u015bci o {0} sekund.
+Perks.ActivationTime.Bonus=[[GOLD]] ({0}s ze zdolno\u015bci\u0105 Wytrzyma\u0142o\u015bci)
 Hardcore.Player.Loss=[[GOLD]][mcMMO] [[DARK_RED]]Straciles [[BLUE]]{0}[[DARK_RED]] dzieki smierci.
 Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] by\u0142 zbyt ma\u0142o do\u015bwiadczony aby czegokolwiek Ciebie nauczy\u0107.
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Ukrad\u0142e\u015b [[BLUE]]{0}[[DARK_AQUA]] poziom\u00f3w od [[YELLOW]]{1}.
@@ -602,5 +602,5 @@ Smelting.SkillName=PRZETAPIANIE
 Commands.Description.adminchat=Wlacza/wylacza czat admin\u00f3w lub wysyla wiadomosc na czat admin\u00f3w
 Commands.Description.mcnotify=Wlacza/wylacza informacje na temat umiejetnosci mcMMO na czacie
 Commands.Description.vampirism=Zmodyfikuj wartosc procentowa na aktywowanie wampiryzmu mcMMO lub go wlacz/wylacz
-UpdateChecker.outdated=Uzywasz przestarzalej wersji mcMMO!
-UpdateChecker.newavailable=Dostepna jest nowa wersja na BukkitDev.
+UpdateChecker.Outdated=Uzywasz przestarzalej wersji mcMMO!
+UpdateChecker.NewAvailable=Dostepna jest nowa wersja na BukkitDev.
