--- a/src/main/resources/locale/locale_th_TH.properties
+++ b/src/main/resources/locale/locale_th_TH.properties
@@ -586,17 +586,17 @@ Stats.Header.Combat=[[GOLD]]-=\u0e17\u0e31\u0e01\u0e29\u0e30\u0e01\u0e32\u0e23\u
 Stats.Header.Gathering=[[GOLD]]-=\u0e17\u0e31\u0e01\u0e29\u0e30 GATHERING=-
 Stats.Header.Misc=[[GOLD]]-=\u0e17\u0e31\u0e01\u0e29\u0e30 MISC=-
 Stats.Own.Stats=[[GREEN]][mcMMO] \u0e2a\u0e16\u0e34\u0e15\u0e34
-Perks.xp.name=\u0e1b\u0e23\u0e30\u0e2a\u0e1a\u0e01\u0e32\u0e23\u0e13\u0e4c
-Perks.xp.desc=\u0e44\u0e14\u0e49\u0e23\u0e31\u0e1a {0}x EXP.
-Perks.lucky.name=\u0e42\u0e0a\u0e04
-Perks.lucky.desc=\u0e43\u0e2b\u0e49\u0e17\u0e31\u0e01\u0e29\u0e30 {0} \u0e41\u0e25\u0e30\u0e04\u0e27\u0e32\u0e21\u0e2a\u0e32\u0e21\u0e32\u0e23\u0e16\u0e21\u0e35\u0e42\u0e2d\u0e01\u0e32\u0e2a 33.3% \u0e14\u0e35\u0e01\u0e27\u0e48\u0e32\u0e17\u0e35\u0e48\u0e08\u0e30\u0e40\u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19
-Perks.lucky.desc.login=\u0e43\u0e2b\u0e49\u0e17\u0e31\u0e01\u0e29\u0e30\u0e1a\u0e32\u0e07\u0e2d\u0e22\u0e48\u0e32\u0e07\u0e41\u0e25\u0e30\u0e04\u0e27\u0e32\u0e21\u0e2a\u0e32\u0e21\u0e32\u0e23\u0e16\u0e43\u0e19\u0e42\u0e2d\u0e01\u0e32\u0e2a\u0e17\u0e35\u0e48 33.3% \u0e14\u0e35\u0e01\u0e27\u0e48\u0e32\u0e17\u0e35\u0e48\u0e08\u0e30\u0e40\u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19
-Perks.lucky.bonus=[[GOLD]] ({0} \u0e14\u0e49\u0e27\u0e22 Lucky Perk)
-Perks.cooldowns.name=Fast Recovery
-Perks.cooldowns.desc=\u0e25\u0e14\u0e23\u0e30\u0e22\u0e30\u0e40\u0e27\u0e25\u0e32\u0e04\u0e39\u0e25\u0e14\u0e32\u0e27\u0e19\u0e4c {0}.
-Perks.activationtime.name=\u0e04\u0e27\u0e32\u0e21\u0e2d\u0e14\u0e17\u0e19
-Perks.activationtime.desc=\u0e40\u0e1e\u0e34\u0e48\u0e21\u0e40\u0e27\u0e25\u0e32\u0e01\u0e32\u0e23\u0e40\u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19\u0e04\u0e27\u0e32\u0e21\u0e2a\u0e32\u0e21\u0e32\u0e23\u0e16 {0} \u0e27\u0e34\u0e19\u0e32\u0e17\u0e35.
-Perks.activationtime.bonus=[[GOLD]] ({0}\u0e27\u0e34\u0e19\u0e32\u0e17\u0e35 \u0e14\u0e49\u0e27\u0e22 Endurance Perk)
+Perks.XP.Name=\u0e1b\u0e23\u0e30\u0e2a\u0e1a\u0e01\u0e32\u0e23\u0e13\u0e4c
+Perks.XP.Desc=\u0e44\u0e14\u0e49\u0e23\u0e31\u0e1a {0}x EXP.
+Perks.Lucky.Name=\u0e42\u0e0a\u0e04
+Perks.Lucky.Desc=\u0e43\u0e2b\u0e49\u0e17\u0e31\u0e01\u0e29\u0e30 {0} \u0e41\u0e25\u0e30\u0e04\u0e27\u0e32\u0e21\u0e2a\u0e32\u0e21\u0e32\u0e23\u0e16\u0e21\u0e35\u0e42\u0e2d\u0e01\u0e32\u0e2a 33.3% \u0e14\u0e35\u0e01\u0e27\u0e48\u0e32\u0e17\u0e35\u0e48\u0e08\u0e30\u0e40\u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19
+Perks.Lucky.Desc.Login=\u0e43\u0e2b\u0e49\u0e17\u0e31\u0e01\u0e29\u0e30\u0e1a\u0e32\u0e07\u0e2d\u0e22\u0e48\u0e32\u0e07\u0e41\u0e25\u0e30\u0e04\u0e27\u0e32\u0e21\u0e2a\u0e32\u0e21\u0e32\u0e23\u0e16\u0e43\u0e19\u0e42\u0e2d\u0e01\u0e32\u0e2a\u0e17\u0e35\u0e48 33.3% \u0e14\u0e35\u0e01\u0e27\u0e48\u0e32\u0e17\u0e35\u0e48\u0e08\u0e30\u0e40\u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19
+Perks.Lucky.Bonus=[[GOLD]] ({0} \u0e14\u0e49\u0e27\u0e22 Lucky Perk)
+Perks.Cooldowns.Name=Fast Recovery
+Perks.Cooldowns.Desc=\u0e25\u0e14\u0e23\u0e30\u0e22\u0e30\u0e40\u0e27\u0e25\u0e32\u0e04\u0e39\u0e25\u0e14\u0e32\u0e27\u0e19\u0e4c {0}.
+Perks.ActivationTime.Name=\u0e04\u0e27\u0e32\u0e21\u0e2d\u0e14\u0e17\u0e19
+Perks.ActivationTime.Desc=\u0e40\u0e1e\u0e34\u0e48\u0e21\u0e40\u0e27\u0e25\u0e32\u0e01\u0e32\u0e23\u0e40\u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19\u0e04\u0e27\u0e32\u0e21\u0e2a\u0e32\u0e21\u0e32\u0e23\u0e16 {0} \u0e27\u0e34\u0e19\u0e32\u0e17\u0e35.
+Perks.ActivationTime.Bonus=[[GOLD]] ({0}\u0e27\u0e34\u0e19\u0e32\u0e17\u0e35 \u0e14\u0e49\u0e27\u0e22 Endurance Perk)
 Hardcore.Player.Loss=[[GOLD]][mcMMO] [[DARK_RED]]\u0e04\u0e38\u0e13\u0e40\u0e2a\u0e35\u0e22\u0e23\u0e30\u0e14\u0e31\u0e1a\u0e17\u0e31\u0e01\u0e29\u0e30 [[BLUE]]{0}[[DARK_RED]] \u0e08\u0e32\u0e01\u0e01\u0e32\u0e23\u0e15\u0e32\u0e22.
 Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] \u0e40\u0e1b\u0e47\u0e19\u0e17\u0e31\u0e01\u0e29\u0e30\u0e17\u0e35\u0e48\u0e44\u0e21\u0e48\u0e0a\u0e33\u0e19\u0e32\u0e0d.
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]\u0e04\u0e38\u0e13\u0e44\u0e14\u0e49\u0e02\u0e42\u0e21\u0e22 [[BLUE]]{0}[[DARK_AQUA]] \u0e23\u0e30\u0e14\u0e31\u0e1a\u0e08\u0e32\u0e01 [[YELLOW]]{1}.
@@ -663,5 +663,5 @@ Commands.Description.skillreset=\u0e15\u0e31\u0e49\u0e07\u0e04\u0e48\u0e32\u0e23
 Commands.Description.vampirism=\u0e41\u0e01\u0e49\u0e44\u0e02\u0e23\u0e49\u0e2d\u0e22\u0e25\u0e30 vampirism mcMMO \u0e2b\u0e23\u0e37\u0e2d\u0e42\u0e2b\u0e21\u0e14\u0e2a\u0e25\u0e31\u0e1a vampirism on/off
 Commands.Description.xplock=\u0e25\u0e47\u0e2d\u0e04 mcMMO \u0e1a\u0e32\u0e23\u0e4c\u0e02\u0e2d\u0e07\u0e04\u0e38\u0e13 EXP \u0e17\u0e31\u0e01\u0e29\u0e30 mcMMO \u0e40\u0e09\u0e1e\u0e32\u0e30
 Commands.Description.xprate=\u0e41\u0e01\u0e49\u0e44\u0e02\u0e2d\u0e31\u0e15\u0e23\u0e32 mcMMO EXP \u0e2b\u0e23\u0e37\u0e2d\u0e40\u0e23\u0e34\u0e48\u0e21\u0e15\u0e49\u0e19\u0e40\u0e2b\u0e15\u0e38\u0e01\u0e32\u0e23\u0e13\u0e4c mcMMO EXP
-UpdateChecker.outdated=You are using an outdated version of mcMMO!
-UpdateChecker.newavailable=There is a new version available on BukkitDev.
+UpdateChecker.Outdated=You are using an outdated version of mcMMO!
+UpdateChecker.NewAvailable=There is a new version available on BukkitDev.
