--- a/src/main/resources/locale/locale_ko.properties
+++ b/src/main/resources/locale/locale_ko.properties
@@ -583,17 +583,17 @@ Stats.Header.Combat=[[GOLD]]-=\uc804\ud22c \uae30\uc220=-
 Stats.Header.Gathering=[[GOLD]]-=\uc218\uc9d1 \uae30\uc220=-
 Stats.Header.Misc=[[GOLD]]-=\uae30\ud0c0 \uae30\uc220=-
 Stats.Own.Stats=[[GREEN]][mcMMO] \uc0c1\ud0dc
-Perks.xp.name=\uacbd\ud5d8\uce58
-Perks.xp.desc={0}x \uacbd\ud5d8\uce58 \ud68d\ub4dd
-Perks.lucky.name=\ud589\uc6b4
-Perks.lucky.desc={0} \uae30\uc220\uacfc \ub2a5\ub825\uc744 \ud65c\uc131\ud654 \ud558\uae30\uc704\ud55c 33.3% \ub354 \ub098\uc740 \uae30\ud68c\ub97c \uc81c\uacf5\ud569\ub2c8\ub2e4.
-Perks.lucky.desc.login=\ud2b9\uc815 \uae30\uc220\uacfc \ub2a5\ub825\uc744 \ud65c\uc131\ud654 \ud558\uae30\uc704\ud55c 33.3% \ub354 \ub098\uc740 \uae30\ud68c\ub97c \uc81c\uacf5\ud569\ub2c8\ub2e4.
-Perks.lucky.bonus=[[GOLD]] ({0} \ud589\uc6b4 \ud37d)
-Perks.cooldowns.name=\ube60\ub978 \ud68c\ubcf5
-Perks.cooldowns.desc=\ucfe8\ud0c0\uc784\uc774 {0} \uc904\uc5b4\ub4ed\ub2c8\ub2e4.
-Perks.activationtime.name=\ub0b4\uad6c\uc131
-Perks.activationtime.desc=\uae30\uc220\uc758 \uc2e4\ud589 \uc2dc\uac04\uc774 {0}\ucd08 \uc99d\uac00\ub429\ub2c8\ub2e4.
-Perks.activationtime.bonus=[[GOLD]] ({0}\ucd08 \ub0b4\uad6c\uc131 \ud37d)
+Perks.XP.Name=\uacbd\ud5d8\uce58
+Perks.XP.Desc={0}x \uacbd\ud5d8\uce58 \ud68d\ub4dd
+Perks.Lucky.Name=\ud589\uc6b4
+Perks.Lucky.Desc={0} \uae30\uc220\uacfc \ub2a5\ub825\uc744 \ud65c\uc131\ud654 \ud558\uae30\uc704\ud55c 33.3% \ub354 \ub098\uc740 \uae30\ud68c\ub97c \uc81c\uacf5\ud569\ub2c8\ub2e4.
+Perks.Lucky.Desc.Login=\ud2b9\uc815 \uae30\uc220\uacfc \ub2a5\ub825\uc744 \ud65c\uc131\ud654 \ud558\uae30\uc704\ud55c 33.3% \ub354 \ub098\uc740 \uae30\ud68c\ub97c \uc81c\uacf5\ud569\ub2c8\ub2e4.
+Perks.Lucky.Bonus=[[GOLD]] ({0} \ud589\uc6b4 \ud37d)
+Perks.Cooldowns.Name=\ube60\ub978 \ud68c\ubcf5
+Perks.Cooldowns.Desc=\ucfe8\ud0c0\uc784\uc774 {0} \uc904\uc5b4\ub4ed\ub2c8\ub2e4.
+Perks.ActivationTime.Name=\ub0b4\uad6c\uc131
+Perks.ActivationTime.Desc=\uae30\uc220\uc758 \uc2e4\ud589 \uc2dc\uac04\uc774 {0}\ucd08 \uc99d\uac00\ub429\ub2c8\ub2e4.
+Perks.ActivationTime.Bonus=[[GOLD]] ({0}\ucd08 \ub0b4\uad6c\uc131 \ud37d)
 Hardcore.Player.Loss=[[GOLD]][mcMMO] [[DARK_RED]]\uc8fd\uc74c\uc73c\ub85c [[BLUE]]{0}[[DARK_RED]]\ub97c \uc783\uc5c8\uc2b5\ub2c8\ub2e4.
 Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]]\uc740 \ub2f9\uc2e0\uc5d0\uac8c \uc5b4\ub5a4 \uc9c0\uc2dd\uc744 \ubd80\uc5ec\ud558\uae30 \uc704\ud574 \uc219\ub828\ub418\uc5c8\ub2e4.
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]\ub2f9\uc2e0\uc740 [[YELLOW]]{1} [[DARK_AQUA]]\ub85c\ubd80\ud130 [[BLUE]]{0}[[DARK_AQUA]] \ub808\ubca8\uc744 \ube7c\uc557\uc558\uc2b5\ub2c8\ub2e4.
@@ -662,8 +662,8 @@ Commands.Description.skillreset=\uc720\uc800\uc758 mcMMO \ub808\ubca8 \ub9ac\uc1
 Commands.Description.vampirism=mcMMO \ubc40\ud53c\ub9ac\uc998 \ud655\ub960\uc744 \uc218\uc815\ud558\uac70\ub098 \ubc40\ud53c\ub9ac\uc998 \ubaa8\ub4dc \ud65c\uc131\ud654/\ube44\ud65c\uc131\ud654
 Commands.Description.xplock=\ud2b9\uc815 mcMMO \uc2a4\ud0ac\uc5d0 \ub300\ud55c \uacbd\ud5d8\uce58 \ubc14\ub97c \uc7a0\uae08
 Commands.Description.xprate=mcMMO \uacbd\ud5d8\uce58 \ubc30\uc728\uc744 \uc218\uc815\ud558\uac70\ub098 mcMMO \uacbd\ud5d8\uce58 \uc774\ubca4\ud2b8\ub97c \uc2dc\uc791
-UpdateChecker.outdated=\ub2f9\uc2e0\uc740 \uad6c\ubc84\uc804\uc758 mcMMO\ub97c \uc0ac\uc6a9\uc911\uc785\ub2c8\ub2e4!
-UpdateChecker.newavailable=BukkitDev\uc5d0 \uc0c8 \ubc84\uc804\uc774 \uc874\uc7ac\ud569\ub2c8\ub2e4.
+UpdateChecker.Outdated=\ub2f9\uc2e0\uc740 \uad6c\ubc84\uc804\uc758 mcMMO\ub97c \uc0ac\uc6a9\uc911\uc785\ub2c8\ub2e4!
+UpdateChecker.NewAvailable=BukkitDev\uc5d0 \uc0c8 \ubc84\uc804\uc774 \uc874\uc7ac\ud569\ub2c8\ub2e4.
 Scoreboard.Header.PlayerStats=mcMMO \uc0c1\ud0dc
 Scoreboard.Header.PlayerRank=mcMMO \ub7ad\ud0b9
 Scoreboard.Header.PlayerInspect=mcMMO \uc0c1\ud0dc:
