--- a/src/main/resources/locale/locale_zh_CN.properties
+++ b/src/main/resources/locale/locale_zh_CN.properties
@@ -592,17 +592,17 @@ Stats.Header.Combat=[[GOLD]]-=\u683c\u6597\u6280\u80fd=-
 Stats.Header.Gathering=[[GOLD]]-=\u91c7\u96c6\u6280\u80fd=-
 Stats.Header.Misc=[[GOLD]]-=\u6742\u9879\u6280\u80fd=-
 Stats.Own.Stats=[[GREEN]][mcMMO] \u7edf\u8ba1\u4fe1\u606f
-Perks.xp.name=\u7ecf\u9a8c
-Perks.xp.desc=\u83b7\u5f97 {0}x \u7ecf\u9a8c.
-Perks.lucky.name=\u5e78\u8fd0
-Perks.lucky.desc=\u7ed9\u4e88 {0} \u6280\u80fd\u548c\u80fd\u529b33.3%\u7684\u66f4\u9ad8\u51e0\u7387\u89e6\u53d1
-Perks.lucky.desc.login=\u7ed9\u4e88\u6280\u80fd\u548c\u80fd\u529b33.3%\u5f97\u66f4\u9ad8\u51e0\u7387\u89e6\u53d1
-Perks.lucky.bonus=[[GOLD]] ({0} \u7684\u597d\u8fd0\u52a0\u6210)
-Perks.cooldowns.name=\u5feb\u901f\u6062\u590d
-Perks.cooldowns.desc=\u51cf\u5c11\u51b7\u5374\u65f6\u95f4 {0}.
-Perks.activationtime.name=\u8010\u529b
-Perks.activationtime.desc=\u63d0\u9ad8\u80fd\u529b\uff0c\u6fc0\u6d3b\u65f6\u95f4 {0} \u79d2.
-Perks.activationtime.bonus=[[GOLD]] ({0} \u79d2\u989d\u5916\u6301\u7eed\u65f6\u95f4)
+Perks.XP.Name=\u7ecf\u9a8c
+Perks.XP.Desc=\u83b7\u5f97 {0}x \u7ecf\u9a8c.
+Perks.Lucky.Name=\u5e78\u8fd0
+Perks.Lucky.Desc=\u7ed9\u4e88 {0} \u6280\u80fd\u548c\u80fd\u529b33.3%\u7684\u66f4\u9ad8\u51e0\u7387\u89e6\u53d1
+Perks.Lucky.Desc.Login=\u7ed9\u4e88\u6280\u80fd\u548c\u80fd\u529b33.3%\u5f97\u66f4\u9ad8\u51e0\u7387\u89e6\u53d1
+Perks.Lucky.Bonus=[[GOLD]] ({0} \u7684\u597d\u8fd0\u52a0\u6210)
+Perks.Cooldowns.Name=\u5feb\u901f\u6062\u590d
+Perks.Cooldowns.Desc=\u51cf\u5c11\u51b7\u5374\u65f6\u95f4 {0}.
+Perks.ActivationTime.Name=\u8010\u529b
+Perks.ActivationTime.Desc=\u63d0\u9ad8\u80fd\u529b\uff0c\u6fc0\u6d3b\u65f6\u95f4 {0} \u79d2.
+Perks.ActivationTime.Bonus=[[GOLD]] ({0} \u79d2\u989d\u5916\u6301\u7eed\u65f6\u95f4)
 Hardcore.Player.Loss=[[GOLD]][mcMMO] [[DARK_RED]]\u4f60\u5728\u6b7b\u4ea1\u4e2d\u4e22\u5931 [[BLUE]]{0}[[DARK_RED]].
 Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] \u719f\u7ec3\u5ea6\u4e0d\u8db3, \u65e0\u6cd5\u5438\u53d6\u77e5\u8bc6
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]\u4f60\u4ece [[YELLOW]]{1} \u5077\u53d6 [[BLUE]]{0}[[DARK_AQUA]] \u7ea7
@@ -671,8 +671,8 @@ Commands.Description.skillreset=\u91cd\u7f6e mcMMO\u7b49\u7ea7
 Commands.Description.vampirism=\u66f4\u6539 mcMMO \u69a8\u53d6\u767e\u5206\u6bd4 \u6216\u5207\u6362 vampirism \u6a21\u5f0f\u5f00/\u5173
 Commands.Description.xplock=\u9501\u5b9a\u6307\u5b9amcMMO\u6280\u80fd\u7684\u7ecf\u9a8c\u6761
 Commands.Description.xprate=\u66f4\u6539mcMMO\u7ecf\u9a8c\u500d\u7387\u6216\u5f00\u542f\u4e00\u4e2amcMMO\u7ecf\u9a8c\u7ffb\u500d\u4e8b\u4ef6
-UpdateChecker.outdated=\u4f60\u6b63\u4f7f\u7528\u7740\u4e00\u4e2a\u8fc7\u65f6\u7248\u672c\u7684mcMMO!
-UpdateChecker.newavailable=\u53d1\u73b0BukkitDev\u4e0a\u6709\u53ef\u7528\u65b0\u7248\u672c.
+UpdateChecker.Outdated=\u4f60\u6b63\u4f7f\u7528\u7740\u4e00\u4e2a\u8fc7\u65f6\u7248\u672c\u7684mcMMO!
+UpdateChecker.NewAvailable=\u53d1\u73b0BukkitDev\u4e0a\u6709\u53ef\u7528\u65b0\u7248\u672c.
 Scoreboard.Header.PlayerStats=mcMMO \u7edf\u8ba1
 Scoreboard.Header.PlayerRank=mcMMO \u6392\u540d
 Scoreboard.Header.PlayerInspect=mcMMO \u7edf\u8ba1:
