--- a/src/main/resources/locale/locale_zh_TW.properties
+++ b/src/main/resources/locale/locale_zh_TW.properties
@@ -602,17 +602,17 @@ Stats.Header.Combat=[[GOLD]]-=\u683c\u9b25\u6280\u80fd=-
 Stats.Header.Gathering=[[GOLD]]-=\u63a1\u96c6\u6280\u80fd=-
 Stats.Header.Misc=[[GOLD]]-=\u96dc\u985e\u6280\u80fd=-
 Stats.Own.Stats=[[GREEN]][mcMMO] \u72c0\u614b
-Perks.xp.name=\u7d93\u9a57\u503c
-Perks.xp.desc=\u7372\u5f97 {0}x \u7d93\u9a57\u503c
-Perks.lucky.name=\u5e78\u904b
-Perks.lucky.desc=\u7d66\u4e88 {0} \u6280\u80fd\u9ad8\u65bc33.3%\u4ee5\u4e0a\u7684\u6a5f\u7387\u89f8\u767c
-Perks.lucky.desc.login=\u7d66\u4e88\u6280\u80fd\u9ad8\u65bc33.3%\u4ee5\u4e0a\u7684\u6a5f\u7387\u89f8\u767c
-Perks.lucky.bonus=[[GOLD]] ({0}\u5f88\u8d70\u904b)
-Perks.cooldowns.name=\u5feb\u901f\u56de\u5fa9
-Perks.cooldowns.desc=\u6e1b\u5c11\u51b7\u537b\u6642\u9593 {0}
-Perks.activationtime.name=\u8010\u529b
-Perks.activationtime.desc=\u63d0\u9ad8\u80fd\u529b \u6301\u7e8c\u6642\u9593: {0} \u79d2
-Perks.activationtime.bonus=[[GOLD]] ({0}\u8010\u4e45\u52a0\u4e58)
+Perks.XP.Name=\u7d93\u9a57\u503c
+Perks.XP.Desc=\u7372\u5f97 {0}x \u7d93\u9a57\u503c
+Perks.Lucky.Name=\u5e78\u904b
+Perks.Lucky.Desc=\u7d66\u4e88 {0} \u6280\u80fd\u9ad8\u65bc33.3%\u4ee5\u4e0a\u7684\u6a5f\u7387\u89f8\u767c
+Perks.Lucky.Desc.Login=\u7d66\u4e88\u6280\u80fd\u9ad8\u65bc33.3%\u4ee5\u4e0a\u7684\u6a5f\u7387\u89f8\u767c
+Perks.Lucky.Bonus=[[GOLD]] ({0}\u5f88\u8d70\u904b)
+Perks.Cooldowns.Name=\u5feb\u901f\u56de\u5fa9
+Perks.Cooldowns.Desc=\u6e1b\u5c11\u51b7\u537b\u6642\u9593 {0}
+Perks.ActivationTime.Name=\u8010\u529b
+Perks.ActivationTime.Desc=\u63d0\u9ad8\u80fd\u529b \u6301\u7e8c\u6642\u9593: {0} \u79d2
+Perks.ActivationTime.Bonus=[[GOLD]] ({0}\u8010\u4e45\u52a0\u4e58)
 Hardcore.Player.Loss=[[GOLD]][mcMMO] [[DARK_RED]]\u4f60\u5728\u6b7b\u4ea1\u4e2d\u5931\u53bb\u4e86[[BLUE]]{0}[[DARK_RED]].
 Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] \u592a\u5ae9\u5c0e\u81f4\u81f3\u4f60\u7121\u6cd5\u7372\u5f97\u4efb\u4f55\u80fd\u529b.
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]\u4f60\u5077\u4e86 [[BLUE]]{0}[[DARK_AQUA]] \u7b49\u4f86\u81ea\u65bc[[YELLOW]]{1}.
@@ -686,8 +686,8 @@ Commands.Description.skillreset=\u91cd\u7f6e\u73a9\u5bb6McMMO\u7b49\u7d1a
 Commands.Description.vampirism=\u8abf\u6574mcMMO\u5438\u8840\u6bd4\u4f8b\u6216\u5207\u63db\u5438\u8840\u6a21\u5f0f (\u958b/\u95dc)
 Commands.Description.xplock=\u9396\u4f4f\u4f60\u4e00\u500b\u7279\u5b9amcMMO\u6280\u80fd\u7684\u7d93\u9a57\u6b04
 Commands.Description.xprate=\u8abf\u6574mcMMO\u7d93\u9a57\u503c\u6bd4\u4f8b\u6216\u8209\u8fa6mcMMO\u7d93\u9a57\u503c\u52a0\u500d\u6d3b\u52d5
-UpdateChecker.outdated=\u60a8\u4f7f\u7528\u7684\u662f\u904e\u6642\u7684\u7248\u672cmcMMO\uff01
-UpdateChecker.newavailable=BukkitDev\u4e0a\u5df2\u6709\u65b0\u7248\u672c\u91cb\u51fa\u3002
+UpdateChecker.Outdated=\u60a8\u4f7f\u7528\u7684\u662f\u904e\u6642\u7684\u7248\u672cmcMMO\uff01
+UpdateChecker.NewAvailable=BukkitDev\u4e0a\u5df2\u6709\u65b0\u7248\u672c\u91cb\u51fa\u3002
 Scoreboard.Header.PlayerStats=mcMMO \u72c0\u614b
 Scoreboard.Header.PlayerRank=mcMMO \u6392\u540d
 Scoreboard.Header.PlayerInspect=mcMMO \u72c0\u614b:
