--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -772,3 +772,9 @@ Scoreboard.Misc.Level=Level
 Scoreboard.Misc.CurrentXP=Current XP
 Scoreboard.Misc.RemainingXP=Remaining XP
 Scoreboard.Misc.Overall=Overall
+
+#DATABASE RECOVERY
+Recovery.Notice=[[RED]]Notice: mcMMO was [[DARK_RED]]unable to load your data.[[RED]] Retrying 5 times...
+Recovery.Success=[[GREEN]]Success! Your mcMMO data was loaded.
+Recovery.Failure=[[RED]]mcMMO still cannot load your data. You may want to [[AQUA]]contact the server owner.\n[[YELLOW]]You can still play on the server, but you will have [[BOLD]]no mcMMO levels[[YELLOW]] and any XP you get [[BOLD]]will not be saved[[YELLOW]].
+Recovery.AdminFailureNotice=[[DARK_RED]][A][[RED]] mcMMO was unable to load the player data for [[YELLOW]]{0}[[RED]]. [[LIGHT_PURPLE]]Please inspect your database setup.
