--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ Key:
   - Removal
 
 Version 1.4.07-dev
+ + Added XP boost to Acrobatics when wearing Boots of Feather Falling
  + Added SQL Database can now recover from a dropped connection without losing data. (Thanks Riking!)
  + Added Carrot on a Stick and Flint & Steel to repair.vanilla.yml
  + Added horses to the "Shake" ability
